# data-engineer-challenge

./: .pre-commit-config.yaml  README.MD  main.py  pyproject.toml  sqlite_client.py  unit_test.py  wal.json  wal_records_processor.py
