[tool.poetry]
name = "data-engineer-challenge"
version = "0.1.0"
description = ""
authors = ["florianMalbranque"]
readme = "README.md"
packages = [{include = "data_engineer_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
